[project]
name = "tsut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "jaxtyping>=0.3.3",
  "pandas>=2.3.3",
  "psycopg2-binary>=2.9.11",
  "pyarrow>=21.0.0",
  "pydantic>=2.12.2",
  "pydantic-settings>=2.12.0",
  "ray[all]>=2.50.0",
  "torch>=2.9.0",
  "frozendict>=2.4.7",
]

[dependency-groups]
dev = ["pre-commit>=4.3.0", "ruff>=0.14.2", "ty>=0.0.1a24"]

[tool.ruff.lint]
select = [
  "ALL",
] # Select all the rules by default, we'll exclude explicitly below

ignore = [
  ### Modules
  "COM",
  "DJ",
  "EXE",
  "T10",
  "TID",
  "TD",  # TODO rules

  ### Specific rules
  "E501",   # Lines too long
  "COM819", # Trailing commas
  "FIX002", # Can't commit when TODO present
  "D104",   # No public docstring in package
  "D203",   # Blank line before class docstring
  "D213",   # Multi-line docstring summary should start at the first line
  "ANN401", # Missing type annotation for self in method
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"tests/**/*.py" = ["S101", "ANN201", "NPY002", "PLR2004", "RUF043"]  # Allow asserts, no return type annotations, allow legacy numpy random, magic values, regex patterns

[tool.basedpyright]
reportAnyType = false
